# macop_training_2025

./: .gitignore  README.md  environment.yml  pyproject.toml
Classification Tutorial/: 0. Exploration.ipynb  1. News Title Classifier (BERT).ipynb  2. Visuals.ipynb  test.ipynb
Classification Tutorial/data/: KNN_Classifier_Results.csv
Classification Tutorial/models/: tokenizer.pkl
Classification Tutorial/src/: model_diagnostics.py  model_operations.py  visuals.py
Topic Modeling/: 2. topic_clusters.ipynb  4. topic_clusters.ipynb  cluster_and_summarize.ipynb  z.cluster check.ipynb
Topic Modeling/src/: embed.py  visualize_documents_3d.py
Tutorials/: download_BERT.ipynb  downsample_dataset.ipynb  embedding_tutorial.ipynb
Tutorials/src/: model_operations.py
Wordcloud Generator/: Clean.ipynb  Generate Basic Wordclouds.ipynb
Wordcloud Generator/data/: Business_wordcloud_data.csv  Entertainment_wordcloud_data.csv  Health_wordcloud_data.csv  Science.Technology_wordcloud_data.csv  wordcloud_data.csv
Wordcloud Generator/src/: functions.py
