[project]
name = "macop-training-2025"
version = "0.1.0"
description = "NLP Visualization lecture for Visualize It! MACOP Training Series 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel==6.29.5",
    "numpy==1.22.2",
    "pandas==1.4.1",
    "scikit-learn==1.0.2",
    "spacy==3.4.4",
    "nltk==3.8.1",
    "seaborn==0.11.2",
    "matplotlib==3.6.1",
    "transformers==4.23.1",
    "tokenizers==0.13.3",
    "sentence-transformers==2.2.2",
    "joblib==1.1.0"]

